--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2047,9 +2047,13 @@ header .menu_account .not_logged.mobile {
         gap: 16px;
         padding: 16px;
         background-color: rgba(28, 31, 36, 0.6) !important;
+        -webkit-backdrop-filter: blur(16px);
         backdrop-filter: blur(16px);
-        height: 20rem;
+        max-height: 20rem;
         overflow-y: auto;
+    }
+    .tooltipMobile .content.hidden {
+        display: none !important;
     }
     .tooltipMobile .content::-webkit-scrollbar {
         display: none;
