--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -103,6 +103,10 @@ a {
     box-shadow: 0px 4px 0px #ddb939;
 }
 
+.ReactModal__Overlay {
+    z-index: 99;
+}
+
 header {
     height: fit-content;
 }
