--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,6 +19,7 @@
     --color-red: #981503;
     --color-green: #459803;
     --color-blue: #0fa0b4;
+    --text-button: #311903;
     --text: #f5f5f5;
     --text-inactive: #7c7c7c;
     --tran-02: all 0.2s ease;
@@ -562,7 +563,7 @@ svg.gradientForce linearGradient stop:last-child {
     font-style: normal;
     padding: 12px 32px;
     background: var(--gradient);
-    color: #311903 !important;
+    color: var(--text-button) !important;
     font-size: 20px;
     font-weight: 700;
     width: fit-content;
@@ -1733,6 +1734,15 @@ header .menu_account .not_logged.mobile {
 .promoCodeModal .apply svg {
     width: 100% !important;
     height: 14rem !important;
+}
+.notifications .badge {
+    background-color: red;
+    padding: 3px 10px;
+    position: absolute;
+    bottom: -10px;
+    right: -10px;
+    border-radius: 5px;
+    font-size: 0.8rem;
 }
 /* MOBILE */
 @media screen and (max-width: 768px) {
